<resources>
    <string name="app_name">FirstApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Lista de Clientes</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Click a un cliente</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="TextoRes">Hola Mundo</string>
    <string name="valueTextHelloWorld">Hola Mundo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="listadepagos">Lista de Pagos</string>
    <string name="abonar">Abonar</string>
    <string name="monto_a_depositar">Monto A Depositar</string>
    <string name="fecha_del_abono">Fecha del Abono</string>
    <string name="clientetitle">Cliente</string>
    <string name="detallepagos">Detalle de pagos</string>
    <string name="imprimir">Imprimir</string>

    <string name="dialogMensajeGuardarPago">Desea guardar este pago?</string>
    <string name="dialogAceptarPago">Guardar</string>
    <string name="dialogTituloGuardarPago">PAGO</string>
    <string name="dialogCancel">Cancelar</string>
    <string name="observacion">Observacion</string>
    <string name="hint_ejemplo_4_pago">ejemplo #4 pago</string>
</resources>