<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.firstapp.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />

        <action
            android:id="@+id/action_FirstFragment_to_ClientesFragment"
            app:destination="@id/ClientesFragment" />

        <action
            android:id="@+id/action_FirstFragment_to_ClientesInfoFragment"
            app:destination="@+id/ClienteInfoFragment"
            />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.firstapp.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
        android:id="@+id/ClientesFragment"
        android:name="com.example.firstapp.clientes.ClientesFragment"
        android:label="Clientes Fragment"
        tools:layout="@layout/clientes_fragment">

        <action
            android:id="@+id/action__ClientesFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />

    </fragment>

    <fragment
        android:id="@+id/ClienteInfoFragment"
        android:name="com.example.firstapp.clientes.ClienteInfoFragment"
        android:label="@string/clientetitle"
        tools:layout="@layout/fragment_cliente_info"
        >

        <action
            android:id="@+id/action_ClienteInfo_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_ClienteInfoFragment_to_pagosFragment"
            app:destination="@id/pagosFragment" />

    </fragment>
    <fragment
        android:id="@+id/pagosFragment"
        android:name="com.example.firstapp.PagosFragment"
        android:label="@string/detallepagos"
        tools:layout="@layout/fragment_pagos" />
</navigation>