<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".clientes.ClienteInfoFragment">



    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:id="@+id/scrollInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            >

            <TextView
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="40sp"
                android:layout_marginTop="15dp"
                android:elevation="5dp"
                android:background="@drawable/fondo_redondeado"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textAlignment="center"
                tools:text="Nombre del cliente con apellido"
                android:text="" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/panelInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:background="@color/bg_secundary"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="10dp"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@id/txtNombre"
                >

                <Button
                    android:id="@+id/btnVerPagos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ver Pagos"
                    android:background="@color/bg_primary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="5dp"
                    android:letterSpacing="0.3"
                    />

                <TextView
                    android:id="@+id/lblTituloDebe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Debe"
                    android:letterSpacing="0.4"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnVerPagos"
                    android:textSize="20sp"
                    android:layout_marginTop="15dp"
                    />
                <TextView
                    android:id="@+id/lblDebe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:minHeight="10dp"
                    tools:text="100"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lblTituloDebe"
                    android:textColor="@color/white"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/lblultimoPago"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ultimo Pago"
                    android:textColor="@color/white"
                    android:letterSpacing="0.4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lblDebe"
                    android:layout_marginTop="15dp"
                    />

                <TextView
                    android:id="@+id/txtUltimoPago"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:background="@color/white"
                    android:padding="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lblultimoPago"
                    tools:text="$150  -   07/04/2022"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/panelPago"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="@id/panelInfo"
                android:minHeight="100dp"
                android:visibility="visible"
                >

                <TextView
                    android:id="@+id/labelMonto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monto_a_depositar"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textSize="20sp"
                    android:layout_marginTop="15dp"
                    />

                <EditText
                    android:id="@+id/txtMontoPago"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/labelMonto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textAlignment="center"
                    tools:text="$150.00"
                    android:background="@color/field_text"
                    android:layout_marginTop="10dp"
                    android:textSize="40sp"
                    android:ems="5"
                    android:hint="ej. $150"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/lblMulta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtMontoPago"
                    android:layout_marginTop="10dp"
                    android:text="Multa"

                    />

                <EditText
                    android:id="@+id/txtMulta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lblMulta"
                    android:textSize="23sp"
                    android:text="0.00"
                    android:textAlignment="center"
                    android:ems="5"
                    android:inputType="numberDecimal"
                    />

                <TextView
                    android:id="@+id/labelFecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/fecha_del_abono"

                    android:layout_marginTop="30dp"
                    app:layout_constraintTop_toBottomOf="@id/txtMulta"

                    />

                <EditText
                    android:id="@+id/txtFecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="datetime"
                    android:importantForAutofill="no"
                    android:ems="6"
                    android:layout_marginTop="5dp"
                    android:datePickerMode="spinner"
                    android:calendarViewShown="false"
                    android:startYear="2022"
                    android:background="@color/field_text"
                    android:clickable="false"
                    android:focusable="true"
                    app:layout_constraintTop_toBottomOf="@id/labelFecha"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:nextFocusDown="@id/btnPagar"
                    />


                <Button
                    android:id="@+id/btnPagar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/lblProblema"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/abonar"
                    android:background="@color/azul"
                    android:visibility="invisible"
                    android:layout_marginTop="25dp"
                    />



                <TextView
                    android:id="@+id/lblProblema"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Este es error normal para pruebas"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtFecha"
                    android:background="@color/red"
                    android:textColor="@color/white"
                    android:padding="0dp"
                    android:layout_marginTop="15dp"

                    android:textSize="18sp"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>






        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>




</FrameLayout>